[package]
name = "githoney-worker"
version = "0.0.1"
edition = "2021"

[dependencies]
# balius-sdk = { path = "../balius/balius-sdk" }
balius-sdk = "0.5.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
hex = "0.4"
pallas-addresses = "0.30"
base64 = "0.22"

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = false

